@@ -1,3 +1,6 @@
+2013-03-15:
+- Finished porting ccowhelp to perl.
+
 2013-03-11/12/13/14:
 - Continued porting python frontend to perl.
 
